--- a/public/assets/config-pits.json
+++ b/public/assets/config-pits.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Rapid React - 2022 (Pit Scouting)",
+  "heading": "Charged Up - 2023 (Pit Scouting)",
   "logo": "logo.png",
   "skipTeamSelection": true,
   "pages": [
@@ -9,14 +9,6 @@
         {
           "name": "Team Number",
           "type": "number"
-        },
-        {
-          "name": "Drive Coach",
-          "type": "text"
-        },
-        {
-          "name": "Driver Names",
-          "type": "text"
         }
       ]
     },
@@ -36,86 +28,77 @@
           "type": "number"
         },
         {
-          "name": "Wheel to bumper distance",
-          "type": "number"
-        },
-        {
           "name": "Weight",
           "type": "number"
         },
         {
-          "name": "Drivetrain",
-          "type": "dropdown",
+          "name": "Where do you get game pieces?",
+          "type": "multicheckbox",
           "options": [
-            "West Coast",
-            "Swerve",
-            "Butterfly",
-            "Mecanum",
-            "Other"
+            "Side Wall HP Station",
+            "Driver Wall HP Station",
+            "Floor"
           ]
         },
         {
-          "name": "Swerve Type",
-          "type": "dropdown",
-          "options": [
-            "No swerve",
-            "L1",
-            "L2",
-            "L3",
-            "L4",
-            "Neo",
-            "Falcon"
+          "name": "Can Dock?",
+          "type":"checkbox"
+        },
+        {
+          "name":"Can Engage In:",
+          "type":"multicheckbox",
+          "options":[
+            "Auto",
+            "Teleop"
           ]
         },
         {
-          "name": "Has Driver Camera",
-          "type": "checkbox"
+          "name": "What Game Pieces Can You Place?",
+          "type":"multicheckbox",
+          "options":[
+            "Cone",
+            "Cube"
+          ]
         }
       ]
     },
     {
-      "name": "Match Play",
+      "name": "Autonomous",
       "widgets": [
         {
-          "name": "Dock Time",
-          "type": "number"
+          "name": "Exit Community?",
+          "type": "checkbox"
         },
         {
-          "name": "Cycle time",
-          "type": "number"
-        },
-        {
-          "name": "Parking",
+          "name": "Grid Locations",
           "type": "multicheckbox",
           "options": [
-            "Parking",
-            "Docking",
-            "Engaging"
+            "Top",
+            "Middle",
+            "Bottom"
           ]
         },
         {
-          "name": "Can Pick Up",
+          "name": "# Auto Programs",
+          "type":"spinbox"
+        }
+      ]
+    },
+    {
+      "name": "Teleop",
+      "widgets": [
+        {
+          "name": "Grid Locations",
           "type": "multicheckbox",
           "options": [
-            "Cones",
-            "Tipped Cones",
-            "Cubes"
+            "Top",
+            "Middle",
+            "Bottom"
           ]
         },
         {
-          "name": "Pickup Locations",
-          "type": "multicheckbox",
-          "options": [
-            "Ground",
-            "Sub 1",
-            "Sub 2 Low",
-            "Sub 2 High"
-          ]
-        },
-        {
-          "name": "Comments",
-          "type": "textarea",
-          "colspan": 3
+          "name": "Plays Defense",
+          "type": "checkbox"
         }
       ]
     }
