--- a/public/assets/config-matches.json
+++ b/public/assets/config-matches.json
@@ -1,6 +1,7 @@
 {
   "heading": "Charged Up - 2023 (Match Scouting)",
   "logo": "logo.png",
+  "forceQualifiers": true,
   "pages": [
     {
       "name":"Setup",
@@ -22,7 +23,11 @@
             "Blake Hatcher",
             "Sean Borneman"
           ],
-          "colspan": 2
+          "validation":
+          {
+            "comparison": "greater",
+            "value": 0
+          }
         },
         {
           "name": "No Show",
@@ -35,7 +40,12 @@
       "widgets": [
         {
           "name": "Left Community",
-          "type": "checkbox"
+          "type": "checkbox",
+          "col": 3
+        },
+        {
+          "type": "spacer",
+          "height": 40
         },
         {
           "type": "picture",
@@ -43,49 +53,56 @@
           "height": 300,
           "row": 2,
           "col": 3,
-          "rowspan": 4
+          "rowspan": 4,
+          "colspan": 2
         },
         {
           "name": "Top Scored Cones",
           "type": "spinbox",
           "prefix": "Auto",
           "row": 2,
-          "col": 1
+          "col": 1,
+          "max": 5
         },
         {
           "name": "Top Scored Cubes",
           "type": "spinbox",
           "prefix": "Auto",
           "row": 2,
-          "col": 4
+          "col": 5,
+          "max": 3
         },
         {
           "name": "Middle Scored Cones",
           "type": "spinbox",
           "prefix": "Auto",
           "row": 3,
-          "col": 1
+          "col": 1,
+          "max": 5
         },
         {
           "name": "Middle Scored Cubes",
           "type": "spinbox",
           "prefix": "Auto",
           "row": 3,
-          "col": 4
+          "col": 5,
+          "max": 3
         },
         {
           "name": "Bottom Scored Cones",
           "type": "spinbox",
           "prefix": "Auto",
           "row": 4,
-          "col": 1
+          "col": 1,
+          "max": 5
         },
         {
           "name": "Bottom Scored Cubes",
           "type": "spinbox",
           "prefix": "Auto",
           "row": 4,
-          "col": 4
+          "col": 5,
+          "max": 5
         },
         {
           "type": "spacer",
@@ -100,8 +117,7 @@
             "None"
           ],
           "default": 2,
-          "col": 2,
-          "colspan": 2
+          "col": 3
         }
       ]
     },
@@ -114,49 +130,56 @@
           "height": 300,
           "row": 2,
           "col": 3,
-          "rowspan": 4
+          "rowspan": 4,
+          "colspan": 2
         },
         {
           "name": "Top Scored Cones",
           "type": "spinbox",
           "prefix": "Auto",
           "row": 2,
-          "col": 1
+          "col": 1,
+          "max": 6
         },
         {
           "name": "Top Scored Cubes",
           "type": "spinbox",
           "prefix": "Auto",
           "row": 2,
-          "col": 4
+          "col": 5,
+          "max": 3
         },
         {
           "name": "Middle Scored Cones",
           "type": "spinbox",
           "prefix": "Auto",
           "row": 3,
-          "col": 1
+          "col": 1,
+          "max": 6
         },
         {
           "name": "Middle Scored Cubes",
           "type": "spinbox",
           "prefix": "Auto",
           "row": 3,
-          "col": 4
+          "col": 5,
+          "max": 3
         },
         {
           "name": "Bottom Scored Cones",
           "type": "spinbox",
           "prefix": "Auto",
           "row": 4,
-          "col": 1
+          "col": 1,
+          "max": 9
         },
         {
           "name": "Bottom Scored Cubes",
           "type": "spinbox",
           "prefix": "Auto",
           "row": 4,
-          "col": 4
+          "col": 5,
+          "max": 9
         },
         {
           "type": "spacer",
@@ -165,17 +188,43 @@
         {
           "name": "Links (3 Game Pieces in a Horizontal Row) Completed",
           "type": "spinbox",
-          "col": 1
+          "col": 1,
+          "row": 6,
+          "labelColspan": 2,
+          "max": 9
         },
         {
           "name": "Coopertition Bonus (3 Game Pieces in Middle Grid)",
           "type": "checkbox",
-          "col": 1
+          "col": 5,
+          "row": 6,
+          "labelColspan": 2
+        },
+        {
+          "name": "Pickup Locations",
+          "type": "multicheckbox",
+          "options": [
+            "Floor",
+            "Shelf",
+            "Ramp"
+          ],
+          "col":1,
+          "row": 7,
+          "labelColspan": 2
         },
         {
           "name": "Died on Field",
           "type": "checkbox",
-          "col": 1
+          "col": 5,
+          "row": 8,
+          "labelColspan": 2
+        },
+        {
+          "name": "Runner Robot",
+          "type": "checkbox",
+          "col": 5,
+          "row": 7,
+          "labelColspan": 2
         },
         {
           "name": "Defense Rating",
@@ -186,21 +235,8 @@
             "Average",
             "Very Effective"
           ],
-          "col": 1
-        },
-        {
-          "name": "Runner Robot",
-          "type": "checkbox",
-          "col": 1
-        },
-        {
-          "name": "Pickup Locations",
-          "type": "multicheckbox",
-          "options": [
-            "Floor",
-            "Shelf",
-            "Ramp"
-          ]
+          "col": 1,
+          "labelColspan": 2
         }
       ]
     },
