--- a/public/assets/config-pits.json
+++ b/public/assets/config-pits.json
@@ -8,7 +8,11 @@
       "widgets": [
         {
           "name": "Team Number",
-          "type": "number"
+          "type": "number",
+          "validation": {
+            "comparison": "inRange",
+            "value": [40,10000]
+          }
         }
       ]
     },
