--- a/public/assets/config-matches.json
+++ b/public/assets/config-matches.json
@@ -123,7 +123,7 @@
       ]
     },
     {
-      "name": "Teleop",
+      "name": "TeleOp",
       "widgets": [
         {
           "type": "picture",
@@ -137,7 +137,7 @@
         {
           "name": "Top Scored Cones",
           "type": "spinbox",
-          "prefix": "Auto",
+          "prefix": "TeleOp",
           "row": 2,
           "col": 1,
           "max": 6
@@ -145,7 +145,7 @@
         {
           "name": "Top Scored Cubes",
           "type": "spinbox",
-          "prefix": "Auto",
+          "prefix": "TeleOp",
           "row": 2,
           "col": 5,
           "max": 3
@@ -153,7 +153,7 @@
         {
           "name": "Middle Scored Cones",
           "type": "spinbox",
-          "prefix": "Auto",
+          "prefix": "TeleOp",
           "row": 3,
           "col": 1,
           "max": 6
@@ -161,7 +161,7 @@
         {
           "name": "Middle Scored Cubes",
           "type": "spinbox",
-          "prefix": "Auto",
+          "prefix": "TeleOp",
           "row": 3,
           "col": 5,
           "max": 3
@@ -169,7 +169,7 @@
         {
           "name": "Bottom Scored Cones",
           "type": "spinbox",
-          "prefix": "Auto",
+          "prefix": "TeleOp",
           "row": 4,
           "col": 1,
           "max": 9
@@ -177,7 +177,7 @@
         {
           "name": "Bottom Scored Cubes",
           "type": "spinbox",
-          "prefix": "Auto",
+          "prefix": "TeleOp",
           "row": 4,
           "col": 5,
           "max": 9
