--- a/public/assets/config-matches.json
+++ b/public/assets/config-matches.json
@@ -58,49 +58,49 @@
           "colspan": 2
         },
         {
-          "name": "Top Scored Cones",
+          "name": "Top Cones",
           "type": "spinbox",
-          "prefix": "Auto",
+          "prefix": "A",
           "row": 2,
           "col": 1,
           "max": 5
         },
         {
-          "name": "Top Scored Cubes",
+          "name": "Top Cubes",
           "type": "spinbox",
-          "prefix": "Auto",
+          "prefix": "A",
           "row": 2,
           "col": 5,
           "max": 3
         },
         {
-          "name": "Middle Scored Cones",
+          "name": "Middle Cones",
           "type": "spinbox",
-          "prefix": "Auto",
+          "prefix": "A",
           "row": 3,
           "col": 1,
           "max": 5
         },
         {
-          "name": "Middle Scored Cubes",
+          "name": "Middle Cubes",
           "type": "spinbox",
-          "prefix": "Auto",
+          "prefix": "A",
           "row": 3,
           "col": 5,
           "max": 3
         },
         {
-          "name": "Bottom Scored Cones",
+          "name": "Bottom Cones",
           "type": "spinbox",
-          "prefix": "Auto",
+          "prefix": "A",
           "row": 4,
           "col": 1,
           "max": 5
         },
         {
-          "name": "Bottom Scored Cubes",
+          "name": "Bottom Cubes",
           "type": "spinbox",
-          "prefix": "Auto",
+          "prefix": "A",
           "row": 4,
           "col": 5,
           "max": 5
@@ -123,7 +123,7 @@
       ]
     },
     {
-      "name": "TeleOp",
+      "name": "T",
       "widgets": [
         {
           "type": "picture",
@@ -135,49 +135,49 @@
           "colspan": 2
         },
         {
-          "name": "Top Scored Cones",
+          "name": "Top Cones",
           "type": "spinbox",
-          "prefix": "TeleOp",
+          "prefix": "T",
           "row": 2,
           "col": 1,
           "max": 6
         },
         {
-          "name": "Top Scored Cubes",
+          "name": "Top Cubes",
           "type": "spinbox",
-          "prefix": "TeleOp",
+          "prefix": "T",
           "row": 2,
           "col": 5,
           "max": 3
         },
         {
-          "name": "Middle Scored Cones",
+          "name": "Middle Cones",
           "type": "spinbox",
-          "prefix": "TeleOp",
+          "prefix": "T",
           "row": 3,
           "col": 1,
           "max": 6
         },
         {
-          "name": "Middle Scored Cubes",
+          "name": "Middle Cubes",
           "type": "spinbox",
-          "prefix": "TeleOp",
+          "prefix": "T",
           "row": 3,
           "col": 5,
           "max": 3
         },
         {
-          "name": "Bottom Scored Cones",
+          "name": "Bottom Cones",
           "type": "spinbox",
-          "prefix": "TeleOp",
+          "prefix": "T",
           "row": 4,
           "col": 1,
           "max": 9
         },
         {
-          "name": "Bottom Scored Cubes",
+          "name": "Bottom Cubes",
           "type": "spinbox",
-          "prefix": "TeleOp",
+          "prefix": "T",
           "row": 4,
           "col": 5,
           "max": 9
