rework comments box to fit screen

--- a/public/assets/config-matches.json
+++ b/public/assets/config-matches.json
@@ -247,7 +247,9 @@
         {
           "name": "Comments",
           "type": "textarea",
-          "col": 2,
+          "col": 1,
+          "colspan": 3,
+          "align": "Center",
           "row":11
         },
         {
