--- a/public/assets/config-matches.json
+++ b/public/assets/config-matches.json
@@ -112,9 +112,9 @@
           "name": "Charging Station",
           "type": "radio",
           "options": [
+            "None",
             "Docked+Engaged",
-            "Docked Only",
-            "None"
+            "Docked Only"
           ],
           "default": 2,
           "col": 1,
@@ -229,10 +229,10 @@
           "name": "Charging Station",
           "type": "radio",
           "options": [
+            "None",
             "Docked+Engaged",
             "Docked Only",
-            "Parked",
-            "None"
+            "Parked"
           ],
           "default": 3,
           "row": 9
