update name dropdown

--- a/public/assets/config-matches.json
+++ b/public/assets/config-matches.json
@@ -21,7 +21,21 @@
             "Levi Smelser",
             "Emily Slotegraaf",
             "Blake Hatcher",
-            "Sean Borneman"
+            "Sean Borneman",
+            "Cameron Proffitt",
+            "Carson Eckert",
+            "Doug Cannizzaro",
+            "Evan Camomile",
+            "Logan Richison",
+            "Mason Hill",
+            "Ross Cuttriss",
+            "Traevor Myers",
+            "Addie Ivey",
+            "Karsten Sladky",
+            "Missy Ivey",
+            "Ryder Sroufe",
+            "Scott Thorn",
+            "Sierra Vrska"
           ],
           "defaultOption": true,
           "validation":
