updated pit scouting config

--- a/public/assets/config-pits.json
+++ b/public/assets/config-pits.json
@@ -45,8 +45,12 @@
           ]
         },
         {
-          "name": "Can Dock?",
-          "type":"checkbox"
+          "name":"Can Dock In:",
+          "type":"multicheckbox",
+          "options":[
+            "Auto",
+            "Teleop"
+          ]
         },
         {
           "name":"Can Engage In:",
