--- a/public/assets/config-pits.json
+++ b/public/assets/config-pits.json
@@ -8,15 +8,11 @@
       "widgets": [
         {
           "name": "Team Number",
-          "type": "number"
-        },
-        {
-          "name": "Drive Coach",
-          "type": "text"
-        },
-        {
-          "name": "Driver Names",
-          "type": "text"
+          "type": "number",
+          "validation": {
+            "comparison": "inRange",
+            "value": [40,10000]
+          }
         }
       ]
     },
@@ -36,113 +32,85 @@
           "type": "number"
         },
         {
-          "name": "Wheel-Bumper Distance",
-          "type": "number"
-        },
-        {
           "name": "Weight",
           "type": "number"
         },
         {
-          "name": "Drivetrain",
-          "type": "dropdown",
+          "name": "Where do you get game pieces?",
+          "type": "multicheckbox",
           "options": [
-            "West Coast",
-            "Swerve",
-            "Butterfly",
-            "Mecanum",
-            "Other"
+            "Ramp",
+            "Shelf",
+            "Floor"
           ]
         },
         {
-          "name": "Swerve Motor Type",
-          "type": "dropdown",
-          "options": [
-            "Neo",
-            "Falcon",
-            "Cim"
+          "name":"Can Dock In:",
+          "type":"multicheckbox",
+          "options":[
+            "Auto",
+            "Teleop"
           ]
         },
         {
-          "name": "Swerve Type",
-          "type": "dropdown",
-          "options": [
-            "No swerve",
-            "L1",
-            "L2",
-            "L3",
-            "L4",
-            "Neo",
-            "Falcon",
-            "Custom"
+          "name":"Can Engage In:",
+          "type":"multicheckbox",
+          "options":[
+            "Auto",
+            "Teleop"
           ]
         },
         {
-          "name": "Has Driver Camera",
-          "type": "checkbox"
+          "name": "What Game Pieces Can You Place?",
+          "type":"multicheckbox",
+          "options":[
+            "Cone",
+            "Cube"
+          ]
         }
       ]
     },
     {
-      "name": "Match Play",
+      "name": "Autonomous",
       "widgets": [
         {
-          "name": "Dock Time",
-          "type": "number"
+          "name": "Exit Community?",
+          "type": "checkbox"
         },
         {
-          "name": "Cycle time",
-          "type": "number"
-        },
-        {
-          "name": "Parking",
+          "name": "Grid Locations",
           "type": "multicheckbox",
           "options": [
-            "Parking",
-            "Docking",
-            "Engaging"
+            "Top",
+            "Middle",
+            "Bottom"
           ]
         },
         {
-          "name": "Can Pick Up",
+          "name": "# Auto Programs",
+          "type":"spinbox"
+        }
+      ]
+    },
+    {
+      "name": "Teleop",
+      "widgets": [
+        {
+          "name": "Grid Locations",
           "type": "multicheckbox",
           "options": [
-            "Cones",
-            "Tipped Cones",
-            "Cubes"
+            "Top",
+            "Middle",
+            "Bottom"
           ]
         },
         {
-          "name": "Can Score In",
-          "type": "multicheckbox",
-          "options": [
-            "High",
-            "Medium",
-            "Low"
-          ]
+          "name": "Plays Defense",
+          "type": "checkbox"
         },
         {
-          "name": "Scoring Methods",
-          "type": "multicheckbox",
-          "options": [
-            "Manual",
-            "Auto"
-          ]
-        },
-        {
-          "name": "Preferred Pickup Location",
-          "type": "dropdown",
-          "options": [
-            "Ground",
-            "Sub 1",
-            "Sub 2 Low",
-            "Sub 2 High"
-          ]
-        },
-        {
-          "name": "Comments",
-          "type": "textarea",
-          "colspan": 3
+          "name": "Scavenger/Runner Bot",
+          "type": "checkbox"
         }
       ]
     }
