update list of scouts

--- a/public/assets/config-matches.json
+++ b/public/assets/config-matches.json
@@ -10,32 +10,36 @@
           "name": "Scout Name",
           "type": "dropdown",
           "options": [
-            "Mady Stricker",
-            "Scott Thorn",
-            "Pam Bessler",
-            "Emerson Bessler",
-            "Sasha Myers",
-            "Joe Smelser",
-            "Donna Smelser",
-            "Emma Smelser",
-            "Levi Smelser",
-            "Emily Slotegraaf",
+            "Abbey Stettler",
+            "Adam Couch",
+            "Addison Ivey",
+            "Alethea Gilpin",
             "Blake Hatcher",
-            "Sean Borneman",
             "Cameron Proffitt",
             "Carson Eckert",
+            "Donna Smelser",
             "Doug Cannizzaro",
+            "Emerson Bessler",
+            "Emily Slotegraaf",
+            "Emma Smelser",
             "Evan Camomile",
+            "Jason Couch",
+            "Jennie Proffitt",
+            "Joe Smelser",
+            "Levi Smelser",
             "Logan Richison",
+            "Mady Stricker",
             "Mason Hill",
-            "Ross Cuttriss",
-            "Traevor Myers",
-            "Addie Ivey",
-            "Karsten Sladky",
             "Missy Ivey",
+            "Pam Bessler",
+            "Ross Cuttriss",
             "Ryder Sroufe",
+            "Sasha Myers",
             "Scott Thorn",
-            "Sierra Vrska"
+            "Sean Borneman",
+            "Sierra Vrska",
+            "Todd Gilpin",
+            "Traevor Myers"
           ],
           "defaultOption": true,
           "validation":
