update people list

--- a/public/assets/config-matches.json
+++ b/public/assets/config-matches.json
@@ -41,7 +41,9 @@
             "Logan Richison",
             "Mady Stricker",
             "Mason Hill",
+            "Maya Wilson",
             "Missy Ivey",
+            "Other",
             "Pam Bessler",
             "Ross Cuttriss",
             "Ryder Sroufe",
